--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,12 @@
       <artifactId>selenium-support</artifactId>
       <version>RELEASE</version>
     </dependency>
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-core</artifactId>
+      <version>5.12.0</version>
+      <scope>test</scope>
+    </dependency>
 
    </dependencies>
 
