--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -24,12 +24,10 @@ jobs:
     - name: Set up JDK 17
       uses: actions/setup-java@v3
       with:
+        chrome-version: 120
         java-version: '17'
         distribution: 'temurin'
+        install-dependencies: true
         cache: maven
-    - name: Set the value
-      id: step_one
-      run: |
-        echo /usr/bin/google-chrome --version
     - name: Build with Maven
       run: mvn -B package --file pom.xml
